tests/pld-test-output/tests-Init-felix0/pld-compile.txt
Error in input.c.
Error variable d is already defined. On position 2:4
   "int d = 5;"
        ^

Error variable i is already defined. On position 3:4
   "int i = 3;"
        ^

2 errors generated.

return code: 1
